# prometheus

./: .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/prometheus/: main.py
apps/api/prometheus/core/: config.py
apps/api/prometheus/data/: agents.json  permissions.json  scenarios.json
apps/api/prometheus/data/documents/: malicious_finance_report.md  poisoned_supplier_contract.md  poisoned_supplier_contract.txt  safe_supplier_contract.md
apps/api/prometheus/data/threat_reports/: google_ai_zero_day_safe_summary.md
apps/api/prometheus/models/: domain.py
apps/api/prometheus/repositories/: __init__.py  database.py  events.py  gateway.py  incidents.py  reports.py  threat_intel.py
apps/api/prometheus/services/: gemini_router.py  historian.py  lobstertrap_bridge.py  permission_engine.py  prophet.py  runtime.py  sandbox_tools.py  seeder.py  threat_intel.py  tool_gateway.py  tribunal.py  trust_engine.py  watcher.py
apps/api/tests/: test_api.py  test_config.py  test_gemini_router.py  test_lobstertrap_bridge.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  FINAL_SUBMISSION.md  GEMINI_USAGE.md  JUDGE_WALKTHROUGH.md  LOCAL_DEMO.md  SPONSOR_USAGE.md
scripts/: capture_screenshots.mjs  demo.sh  init_db.py  render_build_api.sh  render_start_api.sh  seed.py  smoke_gateway.py  smoke_threat_intel.py
submission/: DEMO_CHECKLIST.md  GEMINI_AWARD_WRITEUP.md  JUDGING_CRITERIA_MAPPING.md  PROJECT_SUMMARY.md  TECHNICAL_WRITEUP.md  (+2 more)
(+18 files in other folders)
